# web-based-medical-predictive-analytics-service

./: .env  .gitignore  LICENSE  README.md  bpm.csv  compose.yml  main.py  pyproject.toml  uterus.csv
app/: config.py  const.py
app/backend/: app.py  funcs.py  routes.py
app/emulator/: 20250908-07500001_1.csv  20250908-07500001_2.csv  bpm.csv  datahandler.py  emulator.py  uterus.csv
app/frontend/: empty.txt
app/frontend/fetal-fronted/: package-lock.json  package.json
app/frontend/fetal-fronted/src/app/: page.js
app/frontend/fetal-fronted/src/app/dashboard/: Card.js  Dashboard.js
app/frontend/fetal-frontend/: package-lock.json  package.json
app/frontend/fetal-frontend/.next/: BUILD_ID  app-build-manifest.json  build-manifest.json  export-detail.json  prerender-manifest.json  required-server-files.json  trace
app/frontend/fetal-frontend/.next/cache/: .previewinfo  .rscinfo
app/frontend/fetal-frontend/.next/cache/eslint/: .cache_13yta4f  .cache_1rdorsy
app/frontend/fetal-frontend/.next/server/: middleware-build-manifest.js  next-font-manifest.js  next-font-manifest.json  server-reference-manifest.json  webpack-runtime.js
app/frontend/fetal-frontend/.next/server/app/: _not-found.rsc  index.html  page.js  page_client-reference-manifest.js
app/frontend/fetal-frontend/src/app/: HAKATON.md  design.md  globals.css  page.js
app/ml/: bpm_indicators.py  bpm_signal_analyzer.py  data_conversion.py  get_ctg_data.py  indicators.py  uterus_signal_analyzer.py
db/: db-config.py  db_config.py  query.py
schemas/: indicators_data.py
(+141 files in other folders)
