[project]
name = "web-based-medical-predictive-analytics-service"
version = "0.1.0"
description = "project on LDT-hackaton"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12.3,<4.0"
dependencies = [
    "fastapi[all] (>=0.117.1,<0.118.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "scipy (>=1.16.2,<2.0.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "pydantic[all] (>=2.11.9,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "asyncio (>=4.0.0,<5.0.0)",
    "dotenv (>=0.9.9,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
